GPencil: Linking Modifier Data not supported #76478

Closed
opened 2020-05-06 16:51:35 +02:00 by Telmo Silva · 8 comments

System Information
Operating system: Linux-5.6.8-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits
Graphics card: Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.2.8

Blender Version
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-05-03 22:25, hash: 33bdd91fb8
Worked: (newest version of Blender that worked as expected)

Short description of error
Linking Modifier Data does not work

Exact steps for others to reproduce the error

  1. Create a drawing
  2. Duplicate GP object
  3. Add modifier to one of them
  4. Select the GP object without modifier and after select the GP object with modifier
  5. Press CTRL + L to link data
  6. Choose modifier
  7. No action ocurred
**System Information** Operating system: Linux-5.6.8-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits Graphics card: Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.2.8 **Blender Version** Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-05-03 22:25, hash: `33bdd91fb8` Worked: (newest version of Blender that worked as expected) **Short description of error** Linking Modifier Data does not work **Exact steps for others to reproduce the error** 1. Create a drawing 2. Duplicate GP object 3. Add modifier to one of them 4. Select the GP object without modifier and after select the GP object with modifier 5. Press CTRL + L to link data 6. Choose modifier 7. No action ocurred
Author

Added subscriber: @nottelmo-4

Added subscriber: @nottelmo-4

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

This is a not supported feature yet.

This is a not supported feature yet.
Antonio Vazquez changed title from [Grease Pencil] Linking Modifier Data does not work to GPencil: Linking Modifier Data not supported 2020-05-06 19:40:28 +02:00
Antonio Vazquez self-assigned this 2020-05-06 19:57:34 +02:00

Proposed Fix: D7643

Proposed Fix: [D7643](https://archive.blender.org/developer/D7643)

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Fixed with commit a834c819ee

Fixed with commit a834c819ee25
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76478
No description provided.